--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
     - docker build -t fabiopitte/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run fabiopitte/docker-react npm run test -- --coverage
-    #- docker run -e CI=true fabiopitte/docker-react npm run test
+    #- docker run fabiopitte/docker-react npm run test -- --coverage
+    - docker run -e CI=true fabiopitte/docker-react npm run test
 
-#language: generic
+language: generic
 
