--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,13 @@ script:
     - docker run -e CI=true fabiopitte/docker-react npm run test
 
 deploy:
-    #edge: true
+    edge: true
     provider: elasticbeanstalk
+    access_key_id: 
+        secure: AWS_ACCESS_KEY
+    secret_access_key: 
+        secure: AWS_SECRET_KEY
+
     region: "us-west-2"
     app: "docker-react"
     env: "DockerReact-env"
@@ -18,9 +23,6 @@ deploy:
     bucket_path: "docker-react"
     on:
         branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: 
-        secure: $AWS_SECRET_KEY
 
 # language: generic
 
