--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ deploy:
     edge: true
     provider: elasticbeanstalk
     access_key_id: 
-        secure: "AKIA23YWL2A7MVEZYP5T"
+        secure: $AWS_ACCESS_KEY
     secret_access_key: 
-        secure: "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"
+        secure: $AWS_SECRET_KEY
 
     region: "us-west-2"
     app: "docker-react"
@@ -24,8 +24,8 @@ deploy:
     on:
         branch: master
 
-# language: generic
+language: generic
 
-# dist: xenial
+dist: xenial
 
-# os: linux
+os: linux
