--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ deploy:
     edge: true
     provider: elasticbeanstalk
     access_key_id: 
-        secure: $access_key_id
+        secure: "$access_key_id"
     secret_access_key: 
-        secure: $secret_access_key
+        secure: "$secret_access_key"
 
     region: "us-west-2"
     app: "docker-react"
