--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ script:
 deploy:
     edge: true
     provider: elasticbeanstalk
-    access_key_id: 
-        secure: "$access_key_id"
-    secret_access_key: 
-        secure: "$secret_access_key"
+    access_key_id: "$access_key_id"
+    secret_access_key: "$secret_access_key"
 
     region: "us-west-2"
     app: "docker-react"
