--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ deploy:
     secret_access_key: "$secret_access_key"
 
     region: "us-west-2"
-    app: "docker-react"
-    env: "DockerReact-env"
-    bucket: "elasticbeanstalk-us-west-2-746834350142"
-    bucket_path: "docker-react"
+    app: "docker-react-kubernetes"
+    env: "DockerReactKubernetes-env"
+    bucket: ""
+    bucket_path: "docker-react-kubernetes"
     on:
         branch: master
 
